# GameDev

./: .gitignore  CMakeLists.txt  README.md
engine/: CMakeLists.txt  LICENSE.md  README.md
engine/src/: defines.h  test.c  test.h
engine/src/core/: asserts.c  asserts.h  logger.c  logger.h
examples/: README.md
games/: README.md
games/Dani2025/: CMakeLists.txt
games/Dani2025/glad/include/glad/: glad.h
games/Dani2025/glad/src/: glad.c
games/Dani2025/src/: main.c
games/Dani2025/src/assets/shaders/: test.frag  test.vert
games/Dani2025/src/utils/: events.c  events.h  shaders.c  shaders.h
games/tmp/: README.md
testbed/: CMakeLists.txt
testbed/src/: main.c
